--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="back_button_text">Back</string>
     <string name="age_limitation">13+</string>
     <string name="movie_title_avengers_end_game">Avengers:<br/> End Game</string>
-    <string name="movie_tags_action_adventure_fantasy">Action, Adventure, Fantasy</string>
+    <string name="movie_tags">Action, Adventure, Fantasy</string>
     <string name="storyline">Storyline</string>
     <string name="avengers_end_game_storyline_text">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\&apos; actions and restore balance to the universe.</string>
     <string name="cast">Cast</string>
