--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,8 +12,9 @@
     <string name="movie_background">Movie background</string>
     <string name="back_button_text">Back</string>
     <string name="age_limitation">13+</string>
-    <string name="movie_title_avengers_end_game">Avengers:<br/> End Game</string>
+    <string name="movie_title_avengers_end_game">Avengers: End Game</string>
     <string name="movie_tags">Action, Adventure, Fantasy</string>
+    <string name="movie_card_tags">Action, Adventure, Drama</string>
     <string name="storyline">Storyline</string>
     <string name="avengers_end_game_storyline_text">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\&apos; actions and restore balance to the universe.</string>
     <string name="cast">Cast</string>
@@ -22,4 +23,8 @@
     <string name="chris_evans">Chris <br/>Evans</string>
     <string name="mark_ruffalo">Mark <br/>Ruffalo</string>
     <string name="chris_hemsworth">Chris <br/>Hemsworth</string>
+    <string name="location_movies_list_text">Movies list</string>
+    <string name="location_movies_list_icon">Location movies list icon</string>
+    <string name="like">Like</string>
+    <string name="movie_card_minutes">137 min</string>
 </resources>
