--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
     <string name="app_name">TeamTrack</string>
+    <string name="movie_background_billborad_description">Movie main background</string>
+    <string name="back_button_text">Back</string>
+    <string name="age_limitation">13+</string>
+    <string name="movie_title_avengers_end_game">Avengers: End Game</string>
+    <string name="movie_tags">Action, Adventure, Fantasy</string>
+    <string name="number_of_reviews">125 reviews</string>
+    <string name="storyline">Storyline</string>
+    <string name="movie_storyline_text">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
+    <string name="cast">Cast</string>
+    <string name="robert_downey_jr">Robert Downey Jr.</string>
+    <string name="chris_evans">Chris Evans</string>
+    <string name="mark_ruffalo">Mark Ruffalo</string>
+    <string name="chris_hemsworth">Chris Hemsworth</string>
 </resources>
